# dq3sim

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
assets/: 0xc4179e_jobs.csv  0xc424bc_personalities.csv
assets/growths/: hero_lazy.json  hero_tough.json  hero_valiant.json  magic_soldier_ironman.json  magic_soldier_tough.json  pure_soldier_ironman.json  pure_soldier_tough.json  sage_fearless.json  sage_tough.json
examples/: growth_simulator.rs  plot_rand_dist.rs  plot_rand_scatter3d.rs
jupyter/: EncountStep.ipynb  RNG.ipynb  growth_simulate.ipynb  learning.ipynb
jupyter/.ipynb_checkpoints/: EncountStep-checkpoint.ipynb
src/: attr.rs  battle.rs  bit.rs  growth.rs  job.rs  lib.rs  loader.rs  personality.rs  player.rs  rand.rs  sex.rs  status.rs
