[package]
name = "dq3"
version = "0.1.0"
authors = ["Maru"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/Maru0137/dq3sim"
description = "The library for simulation SFC Dragon Quest III"
readme = "README.md"
keywards = ["dq3"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num = "0.2.1"
gnuplot = "0.0.35"
plotlib = "0.5.1"
wasm-bindgen = "0.2.45"
