[package]
name = "dq3"
version = "0.2.0"
authors = ["Maru"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/Maru0137/dq3sim"
description = "The library for simulation SFC Dragon Quest III"
readme = "README.md"
keywards = ["dq3"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1.6"
enum-iterator = "0.8.1"
enum-map = "2.1.0"
fixed = "1.15.0"
gnuplot = "0.0.35"
lazy_static = "1.4.0"
ndarray = "0.13.1"
num = "0.2.1"
plotlib = "0.5.1"
rand = "0.7.3"
serde = "1.0.137"
wasm-bindgen = "0.2.45"
